--- a/3 Pandas/BasicOperations.ipynb
+++ b/3 Pandas/BasicOperations.ipynb
@@ -2,110 +2,399 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "filename = 'data/car_financing.xlsx'\n",
     "df = pd.read_excel(filename)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Basic Operations\n",
     "\n",
     "1. Assure that you have correctly loaded the data. \n",
     "2. See what kind of data you have. \n",
     "3. Check the validity of your data."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Viewing the first and last 5 rows"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "# Select top N number of records (default = 5)\n",
     "df.head()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Month  Starting Balance  Repayment  Interest Paid  Principal Paid  \\\n",
+       "0      1          34689.96     687.23         202.93          484.30   \n",
+       "1      2          34205.66     687.23         200.10          487.13   \n",
+       "2      3          33718.53     687.23         197.25          489.98   \n",
+       "3      4          33228.55     687.23         194.38          492.85   \n",
+       "4      5          32735.70     687.23         191.50          495.73   \n",
+       "\n",
+       "   New Balance  term  interest_rate       car_type  \n",
+       "0     34205.66    60         0.0702  Toyota Sienna  \n",
+       "1     33718.53    60         0.0702  Toyota Sienna  \n",
+       "2     33228.55    60         0.0702  Toyota Sienna  \n",
+       "3     32735.70    60         0.0702  Toyota Sienna  \n",
+       "4     32239.97    60         0.0702  Toyota Sienna  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Starting Balance</th>\n",
+       "      <th>Repayment</th>\n",
+       "      <th>Interest Paid</th>\n",
+       "      <th>Principal Paid</th>\n",
+       "      <th>New Balance</th>\n",
+       "      <th>term</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>car_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>34689.96</td>\n",
+       "      <td>687.23</td>\n",
+       "      <td>202.93</td>\n",
+       "      <td>484.30</td>\n",
+       "      <td>34205.66</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>Toyota Sienna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>34205.66</td>\n",
+       "      <td>687.23</td>\n",
+       "      <td>200.10</td>\n",
+       "      <td>487.13</td>\n",
+       "      <td>33718.53</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>Toyota Sienna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>33718.53</td>\n",
+       "      <td>687.23</td>\n",
+       "      <td>197.25</td>\n",
+       "      <td>489.98</td>\n",
+       "      <td>33228.55</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>Toyota Sienna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>33228.55</td>\n",
+       "      <td>687.23</td>\n",
+       "      <td>194.38</td>\n",
+       "      <td>492.85</td>\n",
+       "      <td>32735.70</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>Toyota Sienna</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>32735.70</td>\n",
+       "      <td>687.23</td>\n",
+       "      <td>191.50</td>\n",
+       "      <td>495.73</td>\n",
+       "      <td>32239.97</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>Toyota Sienna</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
     "# Select bottom N number of records (default = 5)\n",
     "df.tail()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Month  Starting Balance  Repayment  Interest Paid  Principal Paid  \\\n",
+       "403     56           3951.11     796.01           9.54          786.47   \n",
+       "404     57           3164.64     796.01           7.64          788.37   \n",
+       "405     58           2376.27     796.01           5.74          790.27   \n",
+       "406     59           1586.00     796.01           3.83          792.18   \n",
+       "407     60            793.82     796.01           1.91          794.10   \n",
+       "\n",
+       "     New Balance  term  interest_rate   car_type  \n",
+       "403      3164.64    60          0.029  VW Golf R  \n",
+       "404      2376.27    60          0.029  VW Golf R  \n",
+       "405      1586.00    60          0.029  VW Golf R  \n",
+       "406       793.82    60          0.029  VW Golf R  \n",
+       "407        -0.28    60          0.029  VW Golf R  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Starting Balance</th>\n",
+       "      <th>Repayment</th>\n",
+       "      <th>Interest Paid</th>\n",
+       "      <th>Principal Paid</th>\n",
+       "      <th>New Balance</th>\n",
+       "      <th>term</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>car_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>56</td>\n",
+       "      <td>3951.11</td>\n",
+       "      <td>796.01</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>786.47</td>\n",
+       "      <td>3164.64</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>VW Golf R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>57</td>\n",
+       "      <td>3164.64</td>\n",
+       "      <td>796.01</td>\n",
+       "      <td>7.64</td>\n",
+       "      <td>788.37</td>\n",
+       "      <td>2376.27</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>VW Golf R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>58</td>\n",
+       "      <td>2376.27</td>\n",
+       "      <td>796.01</td>\n",
+       "      <td>5.74</td>\n",
+       "      <td>790.27</td>\n",
+       "      <td>1586.00</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>VW Golf R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>59</td>\n",
+       "      <td>1586.00</td>\n",
+       "      <td>796.01</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>792.18</td>\n",
+       "      <td>793.82</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>VW Golf R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>60</td>\n",
+       "      <td>793.82</td>\n",
+       "      <td>796.01</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>794.10</td>\n",
+       "      <td>-0.28</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0.029</td>\n",
+       "      <td>VW Golf R</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Check the column data types"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
     "# Check the column data types using the dtypes attribute\n",
     "# For example, you can wrongly assume the values in one of your columns is \n",
     "# a int64 instead of a string. \n",
     "df.dtypes"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Month                 int64\n",
+       "Starting Balance    float64\n",
+       "Repayment           float64\n",
+       "Interest Paid       float64\n",
+       "Principal Paid      float64\n",
+       "New Balance         float64\n",
+       "term                  int64\n",
+       "interest_rate       float64\n",
+       "car_type             object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
     "# Use the shape attribute to get the number of rows and columns in your dataframe\n",
     "df.shape"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(408, 9)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
    "source": [
     "# The info method gives the column datatypes + number of non-null values\n",
     "# Notice that we seem to have 408 non-null values for all but the Interest Paid column. \n",
     "df.info()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 408 entries, 0 to 407\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Month             408 non-null    int64  \n",
+      " 1   Starting Balance  408 non-null    float64\n",
+      " 2   Repayment         408 non-null    float64\n",
+      " 3   Interest Paid     407 non-null    float64\n",
+      " 4   Principal Paid    408 non-null    float64\n",
+      " 5   New Balance       408 non-null    float64\n",
+      " 6   term              408 non-null    int64  \n",
+      " 7   interest_rate     408 non-null    float64\n",
+      " 8   car_type          408 non-null    object \n",
+      "dtypes: float64(6), int64(2), object(1)\n",
+      "memory usage: 28.8+ KB\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -117,7 +406,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "3b7552e2d2deb2b91d47afa6e37381259d1e665a4141ca84904c539f02ce184f"
   }
  },
  "nbformat": 4,
