"finished with all the data visualization"

--- a/3 Pandas/Pandas-Template.ipynb
+++ b/3 Pandas/Pandas-Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "# create sample data: list method\n",
     "carLoans = [[1, 34689.96, 687.23, 202.93, 484.3, 34205.66, 60, 0.0702,'Toyota Sienna'],\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "source": [
     "student_grades = {'John': {'math': 'A', 'phys': 'B', 'bio': 'C'},\n",
     "                    'Jane': {'math': 'B', 'phys': 'A', 'bio': 'D'},\n",
@@ -528,14 +528,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "source": [
     "df.to_numpy()"
    ],
@@ -550,14 +550,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "source": [
     "df.to_dict()"
    ],
@@ -574,14 +574,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "source": [
     "df.to_csv(path_or_buf='student_grades.csv', index=False)"
    ],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "source": [
     "%pip install openpyxl"
    ],
@@ -599,13 +599,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.0.7-py2.py3-none-any.whl (243 kB)\n",
-      "\u001b[K     |████████████████████████████████| 243 kB 447 kB/s \n",
-      "\u001b[?25hCollecting et-xmlfile\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.0.7\n",
+      "Requirement already satisfied: openpyxl in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (3.0.7)\n",
+      "Requirement already satisfied: et-xmlfile in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from openpyxl) (1.1.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -614,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "source": [
     "df.to_excel(excel_writer='student_grades.xlsx', index=False)"
    ],
@@ -623,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "source": [
     "df.values"
    ],
@@ -638,7 +633,229 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "df.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     John Jane Bob Alice Tim\n",
+       "math    A    B   B     A   B\n",
+       "phys    B    A   B     D   A\n",
+       "bio     C    D   D     C   B"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>John</th>\n",
+       "      <th>Jane</th>\n",
+       "      <th>Bob</th>\n",
+       "      <th>Alice</th>\n",
+       "      <th>Tim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>math</th>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phys</th>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "      <td>D</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bio</th>\n",
+       "      <td>C</td>\n",
+       "      <td>D</td>\n",
+       "      <td>D</td>\n",
+       "      <td>C</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "df[['John', 'Jane']].head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     John Jane\n",
+       "math    A    B\n",
+       "phys    B    A\n",
+       "bio     C    D"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>John</th>\n",
+       "      <th>Jane</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>math</th>\n",
+       "      <td>A</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phys</th>\n",
+       "      <td>B</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bio</th>\n",
+       "      <td>C</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "filter = df['John'] == 'A'\n",
+    "print(df[filter])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "     John Jane Bob Alice Tim\n",
+      "math    A    B   B     A   B\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "print(df.loc[filter, :])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "     John Jane Bob Alice Tim\n",
+      "math    A    B   B     A   B\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "df['John'].sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'ABC'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "help(pd.DataFrame.string)"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "type object 'DataFrame' has no attribute 'string'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-596a0355bc09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'DataFrame' has no attribute 'string'"
+     ]
     }
    ],
    "metadata": {}
@@ -646,7 +863,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "# in a pandas dataframe, a row represents a single observation and a column"
+   ],
    "outputs": [],
    "metadata": {}
   }
